Pulling image from artifact registery before applying deployment

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,6 +12,7 @@ spec:
     metadata:
       labels:
         app: service1
+        gcp-auth-skip-secret: "true"
     spec:
       containers:
         - name: service1
