--- a/kubernetes-manifests/service1/deployment.yaml
+++ b/kubernetes-manifests/service1/deployment.yaml
@@ -18,3 +18,17 @@ spec:
         - name: service1
           image: europe-west1-docker.pkg.dev/kamaalio/kubernetes-learnings/service1:v1
           imagePullPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: service1-entrypoint
+  namespace: default
+spec:
+  type: NodePort
+  selector:
+    app: service1
+  ports:
+    - port: 8000
+      targetPort: 8000
+      nodePort: 30001
